[gd_scene load_steps=9 format=2]

[ext_resource path="res://Characters/Rocket.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/background.png" type="Texture" id=2]
[ext_resource path="res://Images/ammo_hud.png" type="Texture" id=3]
[ext_resource path="res://Images/score_hud.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Binary_dynamicfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Images/health_hud.png" type="Texture" id=6]
[ext_resource path="res://Sounds/point.ogg" type="AudioStream" id=7]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=8]

[node name="Main" type="Node2D"]
script = ExtResource( 8 )

[node name="Scene Background" type="TextureRect" parent="."]
margin_left = -90.5098
margin_top = -299.813
margin_right = 1349.49
margin_bottom = 1140.19
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo Hud" type="TextureRect" parent="."]
margin_left = 2.13
margin_top = 336.544
margin_right = 107.13
margin_bottom = 927.544
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score Hud" type="TextureRect" parent="."]
margin_left = 877.528
margin_top = 9.86079
margin_right = 1278.53
margin_bottom = 169.861
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 948.807
margin_top = 14.7089
margin_right = 1012.81
margin_bottom = 44.7089
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = ExtResource( 5 )
text = "0"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health Hud" type="TextureRect" parent="."]
margin_left = 1026.81
margin_top = 433.709
margin_right = 1120.81
margin_bottom = 960.709
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rocket" parent="." instance=ExtResource( 1 )]
position = Vector2( 555.432, 656.902 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="PointSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
